Add keyword "rewriter" in package.json.

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "keywords": [
     "winston",
-    "error"
+    "error",
+    "rewriter"
   ],
   "author": "Greg Bergé <berge.greg@gmail.com>",
   "license": "MIT",
