--- a/package.json
+++ b/package.json
@@ -20,5 +20,13 @@
   "bugs": {
     "url": "https://github.com/lemonde/winston-error/issues"
   },
-  "homepage": "https://github.com/lemonde/winston-error"
+  "homepage": "https://github.com/lemonde/winston-error",
+  "devDependencies": {
+    "chai": "^1.9.1",
+    "mocha": "^1.20.0",
+    "sinon": "^1.10.1"
+  },
+  "dependencies": {
+    "lodash": "^2.4.1"
+  }
 }
