--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
   "homepage": "https://github.com/lemonde/winston-error",
   "devDependencies": {
     "chai": "^1.9.1",
-    "mocha": "^1.20.0",
-    "sinon": "^1.10.1"
+    "mocha": "^1.20.0"
   },
   "dependencies": {
     "lodash": "^2.4.1"
